--- a/frontend/package.json
+++ b/frontend/package.json
@@ -160,6 +160,7 @@
     "enzyme-adapter-react-16": "1.12.1",
     "file-loader": "1.x",
     "fork-ts-checker-webpack-plugin": "0.x",
+    "geckodriver": "1.x",
     "glob": "7.x",
     "glslify-loader": "1.x",
     "html-webpack-plugin": "3.x",
