--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,25 +5,28 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "public"
+    "public",
+    "integration-tests"
   ],
   "scripts": {
     "clean": "rm -rf ./public/dist",
     "dev": "yarn clean && NODE_OPTIONS=--max-old-space-size=4096 ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack-dev-server",
     "build": "yarn clean && NODE_ENV=production NODE_OPTIONS=--max-old-space-size=4096 ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --mode=production",
     "coverage": "jest --coverage .",
-    "eslint": "eslint --ext .js,.jsx,.ts,.tsx --color",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx,.json --color",
     "lint": "yarn eslint .",
     "test": "jest",
     "debug-test": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "webdriver-update": "webdriver-manager update --gecko=false",
+    "webdriver-update": "webdriver-manager update --gecko=true",
+    "webdriver-update-macos": "CHROME_VERSION=$(/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome --version) && yarn webdriver-update --versions.chrome=\"${CHROME_VERSION}\"",
     "test-gui-tap": "TAP=true yarn run test-gui",
     "test-gui-openshift": "yarn run test-suite --suite crud --params.openshift true",
     "test-gui": "yarn run test-suite --suite all",
     "test-suite": "ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/protractor integration-tests/protractor.conf.ts",
     "debug-test-suite": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' node -r ts-node/register --inspect-brk ./node_modules/.bin/protractor integration-tests/protractor.conf.ts",
     "analyze": "NODE_ENV=production NODE_OPTIONS=--max-old-space-size=4096 ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack --mode=production --profile --json | awk '{if(NR>2)print}' > public/dist/stats.json && ts-node -O '{\"module\":\"commonjs\"}' ./node_modules/.bin/webpack-bundle-analyzer --mode static -r public/dist/report.html public/dist/stats.json",
-    "plugin-stats": "node ./plugin-stats.js"
+    "plugin-stats": "node ./plugin-stats.js",
+    "prettier-all": "prettier --write '**/*.{js,jsx,ts,tsx,json}'"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -35,7 +38,10 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "^dnd-core$": "dnd-core/dist/cjs",
+      "^react-dnd$": "react-dnd/dist/cjs",
+      "^react-dnd-html5-backend$": "react-dnd-html5-backend/dist/cjs"
     },
     "transform": {
       ".(ts|tsx|js|jsx)": "./node_modules/ts-jest/preprocessor.js"
@@ -68,42 +74,44 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@patternfly/patternfly": "2.33.5",
-    "@patternfly/react-charts": "5.0.13",
-    "@patternfly/react-core": "3.112.1",
-    "@patternfly/react-table": "2.22.17",
-    "@patternfly/react-tokens": "2.6.31",
-    "@patternfly/react-topology": "2.8.63",
-    "@patternfly/react-virtualized-extension": "1.2.53",
+    "@patternfly/patternfly": "2.47.2",
+    "@patternfly/react-charts": "5.2.2",
+    "@patternfly/react-core": "3.124.1",
+    "@patternfly/react-table": "2.24.41",
+    "@patternfly/react-tokens": "2.7.10",
+    "@patternfly/react-topology": "2.11.27",
+    "@patternfly/react-virtualized-extension": "1.3.40",
+    "@patternfly/react-catalog-view-extension": "1.1.42",
     "abort-controller": "3.0.0",
     "classnames": "2.x",
     "core-js": "2.x",
     "d3": "^5.9.2",
     "file-saver": "1.3.x",
-    "formik": "2.0.1-rc.1",
+    "focus-trap-react": "^6.0.0",
+    "formik": "2.0.3",
     "fuzzysearch": "1.0.x",
     "history": "4.x",
     "immutable": "3.x",
     "js-base64": "^2.5.1",
     "js-yaml": "^3.13.1",
     "lodash-es": "4.x",
-    "memoize-one": "5.x",
     "monaco-languageclient": "^0.9.0",
     "murmurhash-js": "1.0.x",
     "null-loader": "^3.0.0",
     "openshift-logos-icon": "1.7.1",
     "patternfly": "^3.59.1",
     "patternfly-react": "2.32.3",
-    "patternfly-react-extensions": "2.18.4",
     "point-in-svg-path": "1.0.1",
+    "popper.js": "^1.15.0",
     "prop-types": "15.7.x",
     "react": "^16.9.0",
     "react-copy-to-clipboard": "5.x",
-    "react-dnd": "^2.6.0",
-    "react-dnd-html5-backend": "^2.6.0",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-jsonschema-form": "^1.0.4",
+    "react-lazyload": "^2.6.2",
     "react-linkify": "^0.2.2",
     "react-measure": "^2.2.6",
     "react-modal": "3.x",
@@ -131,7 +139,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
-    "@types/enzyme": "3.x",
+    "@types/enzyme": "3.10.x",
     "@types/glob": "7.x",
     "@types/immutable": "3.x",
     "@types/jasmine": "2.8.x",
@@ -153,13 +161,15 @@
     "browser-env": "3.x",
     "cache-loader": "1.x",
     "chalk": "2.3.x",
-    "chromedriver": "76.x",
+    "chromedriver": "77.x",
     "circular-dependency-plugin": "5.0.2",
     "css-loader": "0.28.x",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "1.12.1",
+    "enzyme": "3.10.x",
+    "enzyme-adapter-react-16": "1.15.2",
     "file-loader": "1.x",
+    "find-up": "4.x",
     "fork-ts-checker-webpack-plugin": "0.x",
+    "geckodriver": "1.x",
     "glob": "7.x",
     "glslify-loader": "1.x",
     "html-webpack-plugin": "3.x",
@@ -171,7 +181,8 @@
     "mini-css-extract-plugin": "0.4.x",
     "monaco-editor-core": "0.14.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "node-sass": "4.12.x",
+    "node-sass": "4.13.x",
+    "prettier": "1.19.1",
     "protractor": "5.4.x",
     "protractor-fail-fast": "3.x",
     "protractor-jasmine2-screenshot-reporter": "0.5.x",
@@ -184,7 +195,7 @@
     "ts-jest": "21.x",
     "ts-loader": "5.3.3",
     "ts-node": "5.x",
-    "typescript": "3.6.3",
+    "typescript": "3.7.2",
     "webpack": "4.40.2",
     "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.9",
